Header issue solved, proper alignment

--- a/movie_buffs_ui/src/Components/CSS/App.css
+++ b/movie_buffs_ui/src/Components/CSS/App.css
@@ -10,7 +10,7 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
+  /* padding: 20px; */
   color: white;
 }
 
@@ -79,8 +79,8 @@
   float: left;
   margin: 0px;
   padding: 0px;
-  margin-left: 15px;
-  padding-top: 25px;
+  margin-left: 10px;
+  padding-top: 10px;
   
 }
 
